Add OpenMRS webhook module and docs
Introduce an OpenMRS appointment webhook OMOD and supporting infra: add .env.example, module resources (config.xml, moduleApplicationContext.xml), Java classes for signing, dispatching and outbox/retry, and unit tests. Update build and runtime configs: include module in Dockerfile, adjust distro properties/assembly, and update docker-compose and frontend Dockerfile/startup. Overhaul README to document the new architecture, run/config instructions and webhook behavior. Also add diagnostic logs and thread dumps (backend_logs.log, threaddump*.txt) for troubleshooting.